# INF551-TD

./: .gitignore  README.md
TD1/: dune  dune-project  nat.ml  typing.ml
TD2/: download-tests.fish  dune  dune-project  parser.ml  sat.ml  solve.ml  sudoku.ml
TD3/: dune  dune-project  lam.ml
TD4/: dune-project
TD4/dependent/: EqElimJ.agda  dnat.agda  dune  expr.ml  lexer.mll  parse_unparse.ml  parser.mly  prover.ml  typing.ml
TD4/dependent/agda-proofs/: dnat.agda  w-types.agda
TD4/dependent/proofs/: bool.proof  coprod.proof  dnat.proof  list.proof  logic.proof
TD4/simple/: dune  expr.ml  lexer.mll  parse.ml  parser.mly  prover.ml  typing.ml
TD4/simple/proofs/: add.proof  curry1.proof  curry2.proof  dist.proof  impdm.proof  orcomm.proof  orelim.proof  pred.proof  russel.proof  s.proof
TD5/: TD5.agda
TD6/: Bool.agda  Div2.agda  EuclidDiv.agda  Gauss.agda  List.agda  Nat.agda  Vector.agda
TD7/: Sort.agda
TD8/: SimplePL.agda
